@@ -34,10 +34,12 @@ import org.ballerinalang.langserver.common.utils.FunctionGenerator;
 import org.ballerinalang.langserver.common.utils.NameUtil;
 import org.ballerinalang.langserver.common.utils.PositionUtil;
 import org.ballerinalang.langserver.commons.CodeActionContext;
+import org.ballerinalang.langserver.commons.capability.LSClientCapabilities;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedCodeActionProvider;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedPositionDetails;
 import org.eclipse.lsp4j.CodeAction;
 import org.eclipse.lsp4j.CodeActionKind;
+import org.eclipse.lsp4j.Command;
 import org.eclipse.lsp4j.Position;
 import org.eclipse.lsp4j.Range;
 import org.eclipse.lsp4j.TextEdit;
@@ -65,8 +67,8 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
                 SyntaxKind.FUNCTION_CALL, SyntaxKind.QUALIFIED_NAME_REFERENCE, SyntaxKind.INDEXED_EXPRESSION,
                 SyntaxKind.FIELD_ACCESS, SyntaxKind.METHOD_CALL, SyntaxKind.CHECK_EXPRESSION, SyntaxKind.LET_EXPRESSION,
                 SyntaxKind.MAPPING_CONSTRUCTOR, SyntaxKind.TYPEOF_EXPRESSION, SyntaxKind.UNARY_EXPRESSION,
-                SyntaxKind.TYPE_TEST_EXPRESSION, SyntaxKind.TRAP_EXPRESSION, SyntaxKind.LIST_CONSTRUCTOR, 
-                SyntaxKind.TYPE_CAST_EXPRESSION, SyntaxKind.TABLE_CONSTRUCTOR, SyntaxKind.IMPLICIT_NEW_EXPRESSION, 
+                SyntaxKind.TYPE_TEST_EXPRESSION, SyntaxKind.TRAP_EXPRESSION, SyntaxKind.LIST_CONSTRUCTOR,
+                SyntaxKind.TYPE_CAST_EXPRESSION, SyntaxKind.TABLE_CONSTRUCTOR, SyntaxKind.IMPLICIT_NEW_EXPRESSION,
                 SyntaxKind.EXPLICIT_NEW_EXPRESSION, SyntaxKind.ERROR_CONSTRUCTOR, SyntaxKind.QUERY_EXPRESSION);
     }
 
@@ -85,13 +87,14 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
         // 6. the qualified name reference of a function call expression
         // 7. a record field with default value
         // 8. a function call expression used in a start action
-        return context.currentSyntaxTree().isPresent() && context.currentSemanticModel().isPresent() 
+        // 9. a client declaration or a module client declaration
+        return context.currentSyntaxTree().isPresent() && context.currentSemanticModel().isPresent()
                 && !(nodeKind == SyntaxKind.MAPPING_CONSTRUCTOR && parentKind == SyntaxKind.TABLE_CONSTRUCTOR)
-                && !(nodeKind == SyntaxKind.FUNCTION_CALL && parentKind == SyntaxKind.LOCAL_VAR_DECL) 
-                && !((nodeKind == SyntaxKind.FUNCTION_CALL || nodeKind == SyntaxKind.METHOD_CALL) 
-                && parentKind == SyntaxKind.CALL_STATEMENT) 
+                && !(nodeKind == SyntaxKind.FUNCTION_CALL && parentKind == SyntaxKind.LOCAL_VAR_DECL)
+                && !((nodeKind == SyntaxKind.FUNCTION_CALL || nodeKind == SyntaxKind.METHOD_CALL)
+                && parentKind == SyntaxKind.CALL_STATEMENT)
                 && parentKind != SyntaxKind.CONST_DECLARATION
-                && !(parentKind == SyntaxKind.ASSIGNMENT_STATEMENT 
+                && !(parentKind == SyntaxKind.ASSIGNMENT_STATEMENT
                 && ((AssignmentStatementNode) parentNode).varRef().equals(node))
                 && !(nodeKind == SyntaxKind.QUALIFIED_NAME_REFERENCE && parentKind == SyntaxKind.FUNCTION_CALL)
                 && parentKind != SyntaxKind.RECORD_FIELD_WITH_DEFAULT_VALUE
@@ -106,12 +109,12 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
     @Override
     public List<CodeAction> getCodeActions(CodeActionContext context,
                                            RangeBasedPositionDetails posDetails) {
-        
+
         Node node = posDetails.matchedCodeActionNode();
         if (isNotExtractable(node, context)) {
             return Collections.emptyList();
         }
-        
+
         String varName = getLocalVarName(context);
         String value = node.toSourceCode().strip();
         LineRange replaceRange = node.lineRange();
@@ -134,14 +137,26 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
         }
         String paddingStr = StringUtils.repeat(" ", statementNode.lineRange().startLine().offset());
         String varDeclStr = String.format("%s %s = %s;%n%s", typeDescriptor, varName, value, paddingStr);
-        Position varDeclPos = new Position(statementNode.lineRange().startLine().line(), 
+        Position varDeclPos = new Position(statementNode.lineRange().startLine().line(),
                 statementNode.lineRange().startLine().offset());
         TextEdit varDeclEdit = new TextEdit(new Range(varDeclPos, varDeclPos), varDeclStr);
         TextEdit replaceEdit = new TextEdit(new Range(PositionUtil.toPosition(replaceRange.startLine()),
-                PositionUtil.toPosition(replaceRange.endLine())),  varName);
+                PositionUtil.toPosition(replaceRange.endLine())), varName);
 
-        return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE, 
-                List.of(varDeclEdit, replaceEdit), context.fileUri(), CodeActionKind.RefactorExtract));
+        CodeAction codeAction = CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_VARIABLE,
+                List.of(varDeclEdit, replaceEdit), context.fileUri(), CodeActionKind.RefactorExtract);
+        addRenamePopup(context, codeAction, replaceEdit.getRange().getStart());
+
+        return Collections.singletonList(codeAction);
+    }
+
+    private void addRenamePopup(CodeActionContext context, CodeAction codeAction, Position position) {
+        LSClientCapabilities lsClientCapabilities = context.languageServercontext().get(LSClientCapabilities.class);
+        if (lsClientCapabilities.getInitializationOptions().isPositionalRefactoredRenameSupported()) {
+            codeAction.setCommand(new Command(
+                    CommandConstants.RENAME_COMMAND_TITLE_FOR_VARIABLE, CommandConstants.POSITIONAL_RENAME_COMMAND,
+                    List.of(context.fileUri(), new Position(position.getLine() + 1, position.getCharacter()))));
+        }
     }
 
     @Override
@@ -165,23 +180,23 @@ public class ExtractToLocalVarCodeAction implements RangeBasedCodeActionProvider
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .collect(Collectors.toSet());
-        
+
         return NameUtil.generateTypeName(VARIABLE_NAME_PREFIX, allNames);
     }
 
     // If the variables within the selected range have been initialized in the closest statement node (and outside
     // the highlighted range), the expression is not extractable.
     private boolean isNotExtractable(Node matchedNode, CodeActionContext context) {
-        List<Symbol> symbolsWithinRange = getVisibleSymbols(context, 
+        List<Symbol> symbolsWithinRange = getVisibleSymbols(context,
                 PositionUtil.toPosition(matchedNode.lineRange().endLine())).stream()
-                .filter(symbol -> (symbol.kind() == SymbolKind.VARIABLE || symbol.kind() == SymbolKind.PARAMETER) 
+                .filter(symbol -> (symbol.kind() == SymbolKind.VARIABLE || symbol.kind() == SymbolKind.PARAMETER)
                         && context.currentSemanticModel().get().references(symbol).stream()
-                        .anyMatch(location -> 
+                        .anyMatch(location ->
                                 PositionUtil.isWithinLineRange(location.lineRange(), matchedNode.lineRange())))
                 .filter(symbol -> symbol.getLocation().isPresent() && PositionUtil.isWithinLineRange(
                         symbol.getLocation().get().lineRange(), getStatementNode(matchedNode).lineRange()))
                 .collect(Collectors.toList());
-        
+
         if (symbolsWithinRange.size() == 0) {
             return false;
         }
